[project]
name = "mypress-agency"
version = "0.1.0"
description = "Agência de Conteúdo Multi-Agente para WordPress com RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.28.8",
    "crewai-tools>=0.1.6",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
mypress-agency = "mypress_agency.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true
